--- a/educ2201/index.html
+++ b/educ2201/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>My GitHub Site by forestfortrees</title>
+    <title>EDUC2201 by Jeremy Forest Price</title>
   </head>
 
   <body>
