--- a/educ2201/index.html
+++ b/educ2201/index.html
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>My GitHub Site</h1>
-            <h2> Materials for EDUC2201 at Fairmont State University</h2>
+            <h1>EDUC2201</h1>
+            <h2>Website for EDUC2201 at Fairmont State University</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
