Fixed page titles

--- a/educ2201/index.html
+++ b/educ2201/index.html
@@ -21,14 +21,14 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/forestfortrees">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/jeremyfprice">View on GitHub</a>
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>EDUC2201</h1>
-            <h2>Website for EDUC2201 at Fairmont State University</h2>
+            <h1>Teaching with Technology</h1>
+            <h2>EDUC2201 at Fairmont State University</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
