--- a/educ2201/index.html
+++ b/educ2201/index.html
@@ -46,7 +46,7 @@
 
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Course!</h3>
 
 <p>This is another change, and probably where I will put an introductory paragraph :-)</p>
 
