--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
 
-
+<h1>Hello. It is nice to see you.</h1>
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
